--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -15,7 +15,7 @@
     <p style="color:#FFFF66"> <font size="3">  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&edufilter=idNmP7uBqhiniPcYL1W6iQ">[beep]</a> A single lap should be completed each time you hear this sound. <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&edufilter=idNmP7uBqhiniPcYL1W6iQ">[ding]</a></p> 
       <p style="color:#FFFF66"> <font size="3">Remember to run in a straight line and run as long possible. The second time you fail to complete a lap before the sound. </p>
       <p style="color:#FFFF66"> <font size="3">Your test will begin on the word start. On your mark, get ready, start </font></p>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&edufilter=idNmP7uBqhiniPcYL1W6iQ"> <center><img src="images/Ori 2.gif" style="width:304px;height:304px;"> </center> </a>
-  
+    <a href="https://scratch.mit.edu/projects/175717507/"> <center><img src="images/Ori 2.gif" style="width:304px;height:304px;"> </center> </a>
+  	<p style="color:#FFFF66"> <font size="3"> <center> My partner's and I scratch story that totally rules p>
 	  </body>
 	</html>
