--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -18,6 +18,6 @@
     <a href="https://scratch.mit.edu/projects/175717507/"> <center><img src="images/Ori 2.gif" style="width:304px;height:304px;"> </center> </a>
   	<p style="color:#FFFF66"> <font size="3"> <center> My partner's and I scratch story that totally rules </center> </font>  </p>
 		   <p style="color:#FFFF66"> <font size="3"><a href="Files/WIN.aia" download> App  </a></p>
-	 <a href="https://repl.it/Mb2g/19"> <center><img src="images/lightning_mcqueen_look_of_cars_3_by_94eliasdesing-darf35q.pngstyle="width:304px;height:304px;"> </center> </a>
+	 <a href="https://repl.it/Mb2g/19"> <center><img src="images/lightning_mcqueen_look_of_cars_3_by_94eliasdesing-darf35q.png" style="width:304px;height:304px;"> </center> </a>
 	  </body>
 	</html>
