--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -16,9 +16,9 @@
       <p style="color:#FFFF66"> <font size="3">Remember to run in a straight line and run as long possible. The second time you fail to complete a lap before the sound. </p>
       <p style="color:#FFFF66"> <font size="3">Your test will begin on the word start. On your mark, get ready, start </font></p>
     <a href="https://scratch.mit.edu/projects/175717507/"> <center><img src="images/Ori 2.gif" style="width:304px;height:304px;"> </center> </a>
-  	<p style="color:#FFFF66"> <font size="3"> <center> My partner's and I scratch story that totally rules </center> </font>  </p>
+  	<p style="color:#FFFF66"> <font size="3"> <center> My partner's and I scratch story that totally rules  </font>  </p>
 		   <p style="color:#FFFF66"> <font size="3"><a href="Files/WIN.aia" download> App  </a></p>
-	 <a href="https://repl.it/Mb2g/19"> <center><img src="images/lightning_mcqueen_look_of_cars_3_by_94eliasdesing-darf35q.png" style="width:304px;height:304px;"> </center> </a>
-			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Stupid111.py" download> Rock Paper and Scissors  </a></p>
+	 <a href="https://repl.it/Mb2g/19"> <img src="images/lightning_mcqueen_look_of_cars_3_by_94eliasdesing-darf35q.png" style="width:304px;height:304px;">  </a>
+			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Stupid111.py" download> Rock Paper and Scissors  </center></a></p>
 	  </body>
 	</html>
