--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -5,6 +5,7 @@
 	    <title>CSP_P#</title>
 	  </head>
 	  <body background="backgrounds/Ori 3.jpg">
+		   <embed src="files/bgsound.mp3" autostart="true" loop="true">  
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="CSP_P4.html">Why</a>
