--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -22,5 +22,7 @@
 	 <a href="https://repl.it/Mb2g/19"> <img src="images/lightning_mcqueen_look_of_cars_3_by_94eliasdesing-darf35q.png" style="width:304px;height:304px;">  </a>
 			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Stupid111.py" download> Rock Paper and Scissors  </center></a></p>
 		    <p style="color:#FFFF66"> <font size="3"><a href="Files/AP Tech.zip" download> AP Stuff  </center></a></p>
+		  <p style="color:#FFFF66"> <font size="3"><a href=https://docs.google.com/document/d/1kO0cXh4-gzdYD5EQJ3opPA6BoL1jYDS0FgNkCHo19vE/edit?usp=sharing"> Tic Tac Toe Document </center></a></p>
+			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Tic Tac Toe.zip" download> Tic Tac Toe Game </center></a></p>
 	  </body>
 	</html>
