--- a/CSP_P4.html
+++ b/CSP_P4.html
@@ -23,6 +23,6 @@
 			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Stupid111.py" download> Rock Paper and Scissors  </center></a></p>
 		    <p style="color:#FFFF66"> <font size="3"><a href="Files/AP Tech.zip" download> AP Stuff  </center></a></p>
 		  <p style="color:#FFFF66"> <font size="3"><a href=https://docs.google.com/document/d/1kO0cXh4-gzdYD5EQJ3opPA6BoL1jYDS0FgNkCHo19vE/edit?usp=sharing"> Tic Tac Toe Document </center></a></p>
-			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Tic Tac Toe.zip" download> Tic Tac Toe Game </center></a></p>
+			   <p style="color:#FFFF66"> <font size="3"><a href="Files/Tic Tac Toe Game.zip" download> Tic Tac Toe Game </center></a></p>
 	  </body>
 	</html>
